modify the files

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<title>love perlin</title>
+</head>
+<body>
+<div id='mydiv' style="color: red">
+	hello world
+</div>
+<p id="test">这是段落中的<b>粗体</b>文本。</p>
+</body>
+</html>
